package com.hatchloom.connecthub.connecthub_service.enums;

public enum NotificationType {
    MESSAGE,
    CLASSIFIED_CREATED,
}